finished first layout

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </header>
 
     <main>
+<!--Hero Section-->
         <section class="container-fluid">
             <div class="row top-bg-img">
                 <div class="col-4 form-card">
@@ -53,13 +54,15 @@
             </div>
         </section>
 
+<!--Fast facts section w/floating section-->
         <section class="container-fluid">
-            <div class="row">
+            <div class="row bg-warning p-4">
+<!-- currently can not see first col due to second's positioning-->
                 <div class="col-5">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque quibusdam expedita qui voluptatibus, accusantium esse dolorem impedit ea nemo omnis! </p>
                 </div>
-                <div class="col-7 p-2 mid-page-card">
+                <div class="col-7 position-relative p-4 mid-page-card">
                     <p><i class="mdi mdi-sprout p-3"></i>Honey bees are crucial pollinators for plants</p>
                     <p><i class="mdi mdi-sleep p-3"></i>Honey bees never sleep</p>
                     <p><i class="mdi mdi-flower p-3"></i>Honey's flavor comes from the local flora</p>
@@ -71,9 +74,70 @@
 
         </section>
 
+<!--Article section-->
+        <section class="container-fluid">
+            <div class="row">
+                <div class="col-4 p-3">
+                    <img class="bee-at-comb" src="https://images.unsplash.com/photo-1577095870693-360d002ad341?q=80&w=1286&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="honey bee at a honey comb">
+                </div>
+                <div class="col-8">
+                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, praesentium.</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde, laboriosam reprehenderit repellendus architecto necessitatibus amet fugiat ex at! Autem voluptates consectetur perspiciatis veritatis dolore exercitationem vel cumque mollitia praesentium itaque!</p>
+                    <button class="button">LEARN MORE</button>
+                </div>
+            </div>
 
+        </section>
 
+<!--Reviews (about bees?)-->
+        <section class="container">
+            <div class="row mt-5 mb-5">
+                <div class=" col-4 review-cards">
+                    <p>"Some weird person has enough time that they wrote this review about a hive's appearance and the overall maintenance of the hives purely provided by the bees themselves."</p>
+                    <p>This is their name</p>
+                </div>
+                <div class=" col-4 review-card-center">
+                    <p>"Some weird person has enough time that they wrote this review about a hive's appearance and the overall maintenance of the hives purely provided by the bees themselves."</p>
+                    <p>This is their name</p>
+                </div>
+                <div class=" col-4 review-cards">
+                    <p>"Some weird person has enough time that they wrote this review about a hive's appearance and the overall maintenance of the hives purely provided by the bees themselves."</p>
+                    <p>This is their name</p>
+                </div>
+            </div>
+        </section>
+
+<!--Donate section-->
+        <section class="container-fluid">
+            <div class="row bg-warning">
+                <div class="col-10">
+                    <h3>The Bees Need Your Help!</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam, explicabo!</p>
+                    <button>DONATE</button>
+                </div>
+            </div>
+        </section>
     </main>
 
+<!--footer-->
+    <footer class="container-fluid">
+        <div class="row bg-light">
+            <div class="col-4">
+                <p>Help ze bees</p>
+            </div>
+            <div class="col-4">
+                <p>Help ze bees</p>
+            </div>
+            <div class="col-4 d-flex justify-content-center">
+                <p>SOCIALS:</p>
+                <i class="mdi mdi-facebook"></i>
+                <i class="mdi mdi-instagram"></i>
+                <i class="mdi mdi-twitter"></i>
+                <i class="mdi mdi-youtube"></i>
+            </div>
+
+        </div>
+
+    </footer>
 </body>
 </html>
