finish finished the first mock up

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 <!--Donate section-->
         <section class="container-fluid">
-            <div class="row bg-warning">
+            <div class="row bottom-bg-img">
                 <div class="col-10">
                     <h3>The Bees Need Your Help!</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam, explicabo!</p>
@@ -121,7 +121,7 @@
 
 <!--footer-->
     <footer class="container-fluid">
-        <div class="row bg-light">
+        <div class="row ">
             <div class="col-4">
                 <p>Help ze bees</p>
             </div>
