--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
     <!--css-->
     <link rel="stylesheet" href="style.css">
-    <title>Clone Site</title>
+    <title>Bee a Hero</title>
 </head>
 
 <body class="debug">
 
-<!--second stage done-->
+<!--header-->
     <header class="sticky-top">
         <div class="container-fluid bee-yellow">
             <div class="row">
