--- a/index.html
+++ b/index.html
@@ -58,31 +58,14 @@
                             <input class="quarter-input" type="number" placeholder="EXT" name="ext">
 
                             <label for="message"></label>
-                            <textarea rows="5" cols="30" id="message" name="user_message" placeholder="MESSAGE"></textarea>
+                            <textarea rows="4" cols="30" id="message" name="user_message" placeholder="MESSAGE"></textarea>
+
+                            <button class="button button-format">SUBMIT</button>
 
                         </div>
                     </form>
-
-                <!--<div class="col-4 form-card">
-                    <h5>Less Subtle Heading</h5>
-                    <form>
-                        <label for="name">Name:</label>
-                        <input type="text">
-                        <br>
-                        <label for="mail">Email:</label>
-                        <input type="email">
-                        <br>
-                        <label for="msg">Message:</label>
-                        <textarea id="msg"></textarea>
-                        <br>
-
-
-                        <input id="agree" type="checkbox">
-                        <label for="agreement"><p class="small-text">by checking this box I agree to the terms</p></label>
-                        <button>SUBMIT</button>
-                    </form>-->
                 </div>
-                <div class="col-5 d-flex justify-content-center align-items-center ">
+                <div class="col-5 d-none d-md-flex justify-content-center align-items-center ">
                     <h1 class="poetsen honey-bees p-2">HONEY BEES<br><span>"The hum of bees is the voice of the garden" ~Elizabeth Lawrence</span></h1>
                     
                 </div>
@@ -92,12 +75,11 @@
 <!--Fast facts section w/floating section-->
         <section class="container-fluid">
             <div class="row bee-yellow p-4">
-<!-- currently can not see first col due to second's positioning-->
-                <div class="col-5">
+                <div class="col-md-5 col-12 order-2 order-md-1">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque quibusdam expedita qui voluptatibus, accusantium esse dolorem impedit ea nemo omnis! </p>
                 </div>
-                <div class="col-7 position-relative p-4 mid-page-card">
+                <div class="col-12 col-md-7 position-relative p-4 mid-page-card order-1 order-md-2">
                     <p><i class="mdi mdi-sprout p-3 icon-bigger"></i>Honey bees are crucial pollinators for plants</p>
                     <p><i class="mdi mdi-sleep p-3 icon-bigger"></i>Honey bees never sleep</p>
                     <p><i class="mdi mdi-flower p-3 icon-bigger"></i>Honey's flavor comes from the local flora</p>
@@ -112,13 +94,13 @@
 <!--Article section-->
         <section class="container-fluid">
             <div class="row">
-                <div class="col-4 p-3">
+                <div class="col-12 col-md-4 align-items-center p-3">
                     <img class="bee-at-comb" src="https://images.unsplash.com/photo-1577095870693-360d002ad341?q=80&w=1286&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="honey bee at a honey comb">
                 </div>
-                <div class="col-8">
-                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, praesentium.</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde, laboriosam reprehenderit repellendus architecto necessitatibus amet fugiat ex at! Autem voluptates consectetur perspiciatis veritatis dolore exercitationem vel cumque mollitia praesentium itaque!</p>
-                    <button class="button">LEARN MORE</button>
+                <div class="col-12 col-md-8">
+                    <h3><i class="mdi mdi-flower-pollen icon-bigger"></i>Honey Bees: Essential Pollinators for Global Food Security</h3>
+                    <p>Honey bees play a critical role in pollinating approximately one-third of the crops we consume, including fruits, vegetables, and nuts, thereby ensuring food diversity and nutrition. Their decline due to factors such as pesticides and habitat loss poses a significant threat to agricultural productivity and biodiversity worldwide.</p>
+                    <button class="button button-format">LEARN MORE</button>
                 </div>
             </div>
 
@@ -148,7 +130,7 @@
                 <div class="col-10">
                     <h3>The Bees Need Your Help!</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam, explicabo!</p>
-                    <button>DONATE</button>
+                    <button class="button button-format d-flex align-items-center">DONATE</button>
                 </div>
             </div>
         </section>
@@ -161,10 +143,10 @@
                 <p>Help ze bees</p>
             </div>
             <div class="col-4">
-                <p>Help ze bees</p>
+                <p>Help uz pleaz</p>
             </div>
             <div class="col-4 d-flex justify-content-center">
-                <p>SOCIALS:</p>
+                <p>SOCIALZ:</p>
                 <i class="mdi mdi-facebook"></i>
                 <i class="mdi mdi-instagram"></i>
                 <i class="mdi mdi-twitter"></i>
