--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     <main>
 <!--Hero Section-->
         <section class="container-fluid">
-            <div class="row top-bg-img">
+            <div class="row top-bg-img pb-4">
                 <div class="col-4 form-card">
                     <form>
-                        <div class="container">
+                        <div class="container pb-2">
                             <p class="fw-bold fs-3">Sign Up for Our Newsletter</p>
 
                             <label for="name"></label>
@@ -78,13 +78,14 @@
                 <div class="col-md-5 col-12 order-2 order-md-1">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque quibusdam expedita qui voluptatibus, accusantium esse dolorem impedit ea nemo omnis! </p>
-                </div>
-                <div class="col-12 col-md-7 position-relative p-4 mid-page-card order-1 order-md-2">
-                    <p><i class="mdi mdi-sprout p-3 icon-bigger"></i>Honey bees are crucial pollinators for plants</p>
-                    <p><i class="mdi mdi-sleep p-3 icon-bigger"></i>Honey bees never sleep</p>
-                    <p><i class="mdi mdi-flower p-3 icon-bigger"></i>Honey's flavor comes from the local flora</p>
-                    <p><i class="mdi mdi-human-female-dance p-3 icon-bigger"></i>Honey bees dance to communicate!</p>
-                    <p><i class="mdi mdi-bottle-tonic-plus p-3 icon-bigger"></i> not only tastes good, but it contains health benefits,too!</p>
+                </div class="">
+                    <div class="col-md-7 col-12  p-4 order-1 order-md-2 position-relative mid-page-card  d-flex flex-column">
+                        <p><i class="mdi mdi-sprout p-3 icon-bigger"></i>Honey bees are crucial pollinators for plants</p>
+                        <p><i class="mdi mdi-sleep p-3 icon-bigger"></i>Honey bees never sleep</p>
+                        <p><i class="mdi mdi-flower p-3 icon-bigger"></i>Honey's flavor comes from the local flora</p>
+                        <p><i class="mdi mdi-human-female-dance p-3 icon-bigger"></i>Honey bees dance to communicate!</p>
+                        <p><i class="mdi mdi-bottle-tonic-plus p-3 icon-bigger"></i> not only tastes good, but it contains health benefits,too!</p>
+                    </div>
                 </div>
             </div>
 
@@ -92,14 +93,15 @@
         </section>
 
 <!--Article section-->
-        <section class="container-fluid">
-            <div class="row">
-                <div class="col-12 col-md-4 align-items-center p-3">
+        <section class="container p-2">
+            <div class="row justify-content-center">
+                <div class="col-md-4 col-12 p-3 d-flex justify-content-center">
                     <img class="bee-at-comb" src="https://images.unsplash.com/photo-1577095870693-360d002ad341?q=80&w=1286&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="honey bee at a honey comb">
                 </div>
-                <div class="col-12 col-md-8">
+                <div class="col-md-6 col-12 d-flex flex-column flex-end">
                     <h3><i class="mdi mdi-flower-pollen icon-bigger"></i>Honey Bees: Essential Pollinators for Global Food Security</h3>
                     <p>Honey bees play a critical role in pollinating approximately one-third of the crops we consume, including fruits, vegetables, and nuts, thereby ensuring food diversity and nutrition. Their decline due to factors such as pesticides and habitat loss poses a significant threat to agricultural productivity and biodiversity worldwide.</p>
+
                     <button class="button button-format">LEARN MORE</button>
                 </div>
             </div>
@@ -108,16 +110,16 @@
 
 <!--Reviews (about bees?)-->
         <section class="container">
-            <div class="row mt-5 mb-5">
-                <div class=" col-4 review-cards">
+            <div class="row mt-5 mb-5 d-flex align-items-center justify-content-center">
+                <div class=" col-4 review-cards order-md-1 order-2">
                     <p>"Some weird person has enough time that they wrote this review about a hive's appearance and the overall maintenance of the hives purely provided by the bees themselves."</p>
                     <p>This is their name</p>
                 </div>
-                <div class=" col-4 review-card-center">
+                <div class=" col-4 review-card-center order-md-2 order-1">
                     <p>"Some weird person has enough time that they wrote this review about a hive's appearance and the overall maintenance of the hives purely provided by the bees themselves."</p>
                     <p>This is their name</p>
                 </div>
-                <div class=" col-4 review-cards">
+                <div class=" col-4 review-cards order-md-3 order-3">
                     <p>"Some weird person has enough time that they wrote this review about a hive's appearance and the overall maintenance of the hives purely provided by the bees themselves."</p>
                     <p>This is their name</p>
                 </div>
